--- a/py_course/oops.ipynb
+++ b/py_course/oops.ipynb
@@ -718,6 +718,288 @@
     "# imran.delete()\n",
     "print(imran.__dict__)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.arr object at 0x000001C59C3901F0>\n",
+      "<__main__.arr object at 0x000001C59C390820>\n",
+      "False\n",
+      "<__main__.arr object at 0x000001C59C390820>\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "class arr:\n",
+    "    generic='dfjlj'\n",
+    "obj=arr()\n",
+    "print(obj)\n",
+    "print(arr())\n",
+    "print(obj==arr())\n",
+    "abj2=arr()\n",
+    "print(abj2)\n",
+    "print(id(abj2)==id(arr()))\n",
+    "print(abj2==arr())\n",
+    "# print(arr()==abj2)\n",
+    "# obj3=arr()\n",
+    "# print(arr())\n",
+    "# print(obj3)\n",
+    "# print(id(obj))\n",
+    "# print(arr)\n",
+    "# print(id(arr))\n",
+    "# obj.generic='imaran'\n",
+    "# print(obj.__dict__)\n",
+    "# print(arr.__dict__)\n",
+    "# for i in arr.__dict__:\n",
+    "#     print(i)\n",
+    "# a=499\n",
+    "# b=499\n",
+    "# print(id(a)==id(b))\n",
+    "# print(arr.generic)\n",
+    "# print(obj.generic)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.creat object at 0x000001C59C1FD600>\n",
+      "False\n",
+      "<__main__.creat object at 0x000001C59D504070>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class creat:\n",
+    "    generic='odfj'\n",
+    "obj1=creat()\n",
+    "print(obj1)\n",
+    "print(obj1==creat)\n",
+    "print(creat())\n",
+    "# for i in creat.__dict__:\n",
+    "#     print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "invalid account no or pin \n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "class bank:\n",
+    "    bname='sbi'\n",
+    "    branch='202'\n",
+    "    ifsc='1234SBI23'\n",
+    "    no_cust=0\n",
+    "    cust_details={}\n",
+    "    ROI=4\n",
+    "    TL=9765434778\n",
+    "    transaction={}\n",
+    "    def _init_(self,name,age,email,phone,address,aadhar,pancard,dob,gender,pin,bal=0) :\n",
+    "        self.name=name\n",
+    "        self.age=age\n",
+    "        self.email=email\n",
+    "        self.phone=phone\n",
+    "        self.aadhar=aadhar\n",
+    "        self.pancard=pancard\n",
+    "        self.dob=dob\n",
+    "        self.gender=gender\n",
+    "        self.address=address\n",
+    "        self.pin=pin\n",
+    "        self.bal=bal\n",
+    "        self.no_cust1()\n",
+    "        self.acc_no=500+self.no_cust\n",
+    "        self.concat_cust_details(self.acc_no,self)\n",
+    "    @classmethod\n",
+    "    def no_cust1(cls):\n",
+    "        cls.no_cust+=1\n",
+    "    @classmethod\n",
+    "    def concat_cust_details(cls,acc_no,obj):\n",
+    "        cls.cust_details[acc_no]=obj\n",
+    "    @classmethod\n",
+    "    def change_ROI(cls):\n",
+    "        cls.ROI=int(input(\"Enter ROI\"))\n",
+    "        print(\"ROI is changed\")\n",
+    "    @classmethod\n",
+    "    def check_BAL(cls):\n",
+    "        acc1_no=int(input(\"Enter the Acc num\"))\n",
+    "        pin=int(input(\"Enter pin no\"))\n",
+    "        for i in cls.cust_details:\n",
+    "            x=cls.cust_details[i]\n",
+    "            if x.acc_no==acc1_no and x.pin==pin:\n",
+    "                print(x.acc_no,'BALANCE IS',x.bal)\n",
+    "                return\n",
+    "        else:\n",
+    "            print('INVALID ACC NO OR PIN')\n",
+    "    @classmethod\n",
+    "    def concat_transaction(cls,acc1_no,data):\n",
+    "        if acc1_no in cls.transaction:\n",
+    "            cls.transaction[acc1_no]+=[data]\n",
+    "            print(acc1_no,data)\n",
+    "        else:\n",
+    "            cls.transaction[acc1_no]=[data]\n",
+    "            print(acc1_no,data)\n",
+    "    def deposit(self,count=0):\n",
+    "        if count==3:\n",
+    "            return\n",
+    "        amount=int(input(\"Enter deposit account\"))\n",
+    "        if amount>100:\n",
+    "            self.bal+=amount\n",
+    "            self.success()\n",
+    "            self.concat_transaction(self.acc_no,{'date':datetime.datetime.now(), 'type': 'deposit', 'ammount':amount,'baln':self.bal})\n",
+    "            return\n",
+    "        else:\n",
+    "            print(\"AMOUNT SHOULD BE MIN 100\")\n",
+    "            self.failed()\n",
+    "            return self.deposit(count+1)\n",
+    "    def withdraw(self,count=0):\n",
+    "        if count==3:\n",
+    "            return\n",
+    "        amount3=int(input('ENTER THE WITHDRAW AMOUNT:'))\n",
+    "        if amount3>=200 and self.bal>=amount3:\n",
+    "            self.bal-=amount3\n",
+    "            self.success()\n",
+    "            self.concat_transaction(self.acc_no,{'date':datetime.datetime.now(), 'type':'withdraw','amount':amount3,'bal':self.bal})\n",
+    "            self.success()\n",
+    "            return\n",
+    "        else:\n",
+    "            print(\"Amount should be min 100 Rupees\")\n",
+    "            self.failed()\n",
+    "            return self.withdraw(count+1)\n",
+    "    def MINI_Statement(self):\n",
+    "        print('DATE'.center(25),'Type'.center(15),'AMOUNT'.center(15),'Balnace'.center(15),sep='|')\n",
+    "        print(80*'-')\n",
+    "        for i in self.transaction[self.acc_no]:\n",
+    "            print(str(i['DATE']).center(25),str(i['Type']).center(15),str(i['AMOUNT']).center(15),str(i['Balnace']).center(15),sep='|')\n",
+    "            print(80*'-')\n",
+    "    def CHECK_BAL(self):\n",
+    "        print('YOUR CURRENT BALANCE ',self.bal)\n",
+    "    def PIN_CHANGE(self):\n",
+    "        old=int(input('ENTER THE OD PIN :'))\n",
+    "        if self.pin==old:\n",
+    "            self.pin=int(input('ENTER THE NEW PIN:'))\n",
+    "            print('PIN CHANGED')\n",
+    "            self.success()\n",
+    "        else:\n",
+    "            self.failed()\n",
+    "    def Cus_update(self):\n",
+    "        k=int(input('CHOOSE THE OPTION'))\n",
+    "        match k:\n",
+    "            case 1:\n",
+    "                self.cname=input('ENTER THE NAME')\n",
+    "            case 2:\n",
+    "                self.phone=int(input('ENTER THE PHONE'))\n",
+    "            case 3:\n",
+    "                self.email=eval(input('ENTER THE EMAIL'))\n",
+    "            case 4:\n",
+    "                self.address=eval(input('ENTER THE ADDRESS'))\n",
+    "            case _:\n",
+    "                return\n",
+    "        return self.Cus_update()\n",
+    "    def Account_details(self):\n",
+    "        print('Account no:',self.acc_no)\n",
+    "        print('NAME:',self.name)\n",
+    "        print('AGE:',self.age)\n",
+    "        print('EMAIL:',self.email)\n",
+    "        print('PHONE:',self.phone)\n",
+    "        print('BALANCE:',self.bal)\n",
+    "        print('IFSC CODE:',self.ifsc)\n",
+    "        print('PAN:',self.pancard)\n",
+    "        print('AADHAR:',self.aadhar)\n",
+    "        print('ADDRESS:',self.address)\n",
+    "    def transfer(self):\n",
+    "        print('YOUR CURRENT BALANCE:',self.bal)\n",
+    "        account_no=int(input('Enter the Benificiary accno'))\n",
+    "        ifsc_code=input('Enter the Benificiary IFSC')\n",
+    "        if account_no in self.cust_details and ifsc_code==self.cust_details[account_no].ifsc:\n",
+    "            amt=int(input('Enter the transfer amount:'))\n",
+    "            if self.bal>=amt:\n",
+    "                other=self.cust_details[account_no]\n",
+    "                other.bal+=amt\n",
+    "                self.bal_=amt\n",
+    "                self.concat_transaction(self.acc_no,{'date':datetime.datetime.now(),'type':'Transfer(w)','amount':amt,'bal':self.bal})\n",
+    "                self.concat_transaction(other.acc_no,{'date':datetime.datetime.now(),'type':'Transfer(d)','amount':amt,'bal':other.bal})\n",
+    "                self.success()\n",
+    "                print('After transfer current balanca',self.bal)\n",
+    "                return\n",
+    "            else:\n",
+    "                self.failed()\n",
+    "                print('Insuffient balance')\n",
+    "        else:\n",
+    "            print('Invalid acccount number or IFSC Code')\n",
+    "            return\n",
+    "    @classmethod\n",
+    "    def Home(cls,self):\n",
+    "        y=int(input('Choose the option:\\n0.AccountDetails\\n1.Check Bal\\n2.Deposit\\n3.Withdraw\\n4.Mini Statement\\n5.update\\n6.Pin change\\n7.check ROI\\n8.transfer\\n9.Exit'))\n",
+    "        print('*'*150)\n",
+    "        match y:\n",
+    "            case 0:\n",
+    "                self.Account_details()\n",
+    "            case 1:\n",
+    "                self.CHECK_BAL()\n",
+    "            case 2:\n",
+    "                self.withdraw()\n",
+    "            case 3:\n",
+    "                self.MINI_Statement()\n",
+    "            case 4:\n",
+    "                self.Cus_update()\n",
+    "            case 5:\n",
+    "                self.PIN_CHANGE()\n",
+    "            case 6:\n",
+    "                self.deposit()\n",
+    "            case 7:\n",
+    "                print('Today RATE OF INTREST',self.ROI)\n",
+    "            case 8:\n",
+    "                self.transfer()\n",
+    "            case _:\n",
+    "                return\n",
+    "        return cls.Home(self)\n",
+    "    @staticmethod\n",
+    "    def success():\n",
+    "        print('|---------------------|')\n",
+    "        print('|Transaction is succes|')\n",
+    "        print('|---------------------|')\n",
+    "    @staticmethod\n",
+    "    def success():\n",
+    "        print('|---------------------|')\n",
+    "        print('|Transaction is Failed|')\n",
+    "        print('|---------------------|')\n",
+    "\n",
+    "    \n",
+    "# obj=bank('sri',22,'sri@gmail.com',913254656,'HYD',13243657,'DSF457VF34','17-2-2003','M',1234)\n",
+    "# obj1=bank('veni',22,'veni@gmail.com',92132765656,'HYD',132233657,'DCV457VF34','17-11-2003','F',5678)\n",
+    "def main(cls):\n",
+    "    acc_no=int(input(\"enter the Account_no:\"))\n",
+    "    pin=int(input(\"enter the Pin_no:\"))\n",
+    "    if acc_no in cls.cust_details and cls.cust_details[acc_no].pin == pin:\n",
+    "        self = cls.cust_details[acc_no]\n",
+    "        cls.Home(self)\n",
+    "    else:\n",
+    "        print(\"invalid account no or pin \")\n",
+    "main(bank)"
+   ]
   }
  ],
  "metadata": {
