--- a/py_course/oops.ipynb
+++ b/py_course/oops.ipynb
@@ -1,8 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OBJECT ORIENTED PROGRAMMING:\n",
+    ". The phenemenon of working with real word entities or real time objects will leads us to work with the concept called object oriented programming language.\n",
+    ". It is used for solving the real-time entity problems.\n",
+    ". It is used for storing and manipulating the real-time entity data.\n",
+    ". As we are working with real world entities, the built in data-types are not sufficient, enough to store the details of real world entities and\n",
+    "  because real world entities will have various types, various properties, various structure, various functionality are present, this all are not suitable to store or retrieve the information by using built-in data-types.\n",
+    ". So that we are goung to use the user-defined data-types called class and object\n",
+    ". through class and object, we are creating our own status(properties) and behaviour (functionalities) related to real world entities.\n",
+    "\n",
+    "why OOPS?\n",
+    " . Organize code and classify data and functions providing a clear structure.\n",
+    " . Easy maintenance and modification.\n",
+    " . Reduce code, reduce code difficulty, by enabling code reusability.\n",
+    " . Inheritance which helps us to inherit data from one class to another class.\n",
+    " . Encapsulation, where secure data by implementing private"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +65,7 @@
        "              '__doc__': None})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +85,7 @@
        "{}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -96,9 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iphone None\n",
+      "iphone None\n"
+     ]
+    }
+   ],
    "source": [
     "print(mobile.cname,mobile.price)\n",
     "print(obj.cname,obj.price)"
@@ -113,15 +143,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ONEPLUS 28000 {'cname': 'ONEPLUS', 'model': 'oneplus 13', 'price': 28000, 'ram': '8gb', 'rom': '128gb'}\n"
+      "ONEPLUS\n",
+      "28000\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'cname': 'ONEPLUS',\n",
+       " 'model': 'oneplus 13',\n",
+       " 'price': 28000,\n",
+       " 'ram': '8gb',\n",
+       " 'rom': '128gb'}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -138,13 +183,17 @@
     "obj1.price=28000\n",
     "obj1.ram='8gb'\n",
     "obj1.rom='128gb'\n",
+    "# obj1.fdf=mobile.rom\n",
     "\n",
-    "print(obj1.cname,obj1.price,obj1.__dict__)"
+    "# print(obj1.cname,obj1.price,obj1.__dict__)\n",
+    "print(obj1.cname)\n",
+    "print(obj1.price)\n",
+    "obj1.__dict__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -182,16 +231,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'cname': 'oneplus ', 'model': '+13', 'price': 50000, 'ram': '16gb', 'rom': '512gb'}\n",
-      "oneplus  {'cname': 'oneplus ', 'model': '+13', 'price': 50000, 'ram': '16gb', 'rom': '512gb'}\n",
-      "<__main__.mobile object at 0x00000120CB047A60>\n"
+      "{'cname': 'oneplus 11', 'model': '+11', 'price': 39000, 'ram': '8gb', 'rom': '256gb'}\n",
+      "oneplus  {'cname': 'oneplus ', 'model': '+13', 'price': 50000, 'ram': '16gb', 'rom': '512gb'}\n"
      ]
     }
    ],
@@ -213,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +309,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X14sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m(collage\u001b[39m.\u001b[39mcname,collage\u001b[39m.\u001b[39msubjects,collage\u001b[39m.\u001b[39mfee)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X14sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mdel\u001b[39;00m collage\u001b[39m.\u001b[39msubjects\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X14sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mprint\u001b[39m(collage\u001b[39m.\u001b[39;49msubjects)\n",
+      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 13\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X14sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m(collage\u001b[39m.\u001b[39mcname,collage\u001b[39m.\u001b[39msubjects,collage\u001b[39m.\u001b[39mfee)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X14sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mdel\u001b[39;00m collage\u001b[39m.\u001b[39msubjects                   \u001b[39m#deleting attribute\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#X14sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mprint\u001b[39m(collage\u001b[39m.\u001b[39;49msubjects)\n",
       "\u001b[1;31mAttributeError\u001b[0m: type object 'collage' has no attribute 'subjects'"
      ]
     }
@@ -283,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -342,8 +390,8 @@
     "Behaviours or functionalities:\n",
     ". Thee are the methods that are used to perform some operation/functionalities,\n",
     "  store or manipulate the states (create/access/modify/delete) inside the class object.\n",
-    ". These are the features that are given to the class or an object to perform some behaviours are written in the form of mithods(functions).\n",
-    ". There are 3 different types of mithods.\n",
+    ". These are the features that are given to the class or an object to perform some behaviours are written in the form of methods(functions).\n",
+    ". There are 3 different types of methods.\n",
     "        A. classmethod.\n",
     "        B. objectmethod.\n",
     "        C. staticmethod"
@@ -382,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -471,9 +519,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JSP ['JAVA', 'WEB', 'SQL', 'FRAMWORK']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "mappingproxy({'__module__': '__main__',\n",
+       "              'cname': 'JSP',\n",
+       "              'subjects': ['JAVA', 'WEB', 'SQL', 'FRAMWORK'],\n",
+       "              'display': <classmethod(<function collage.display at 0x000001F69F23CE50>)>,\n",
+       "              'modify': <classmethod(<function collage.modify at 0x000001F69F23DE10>)>,\n",
+       "              'delete': <classmethod(<function collage.delete at 0x000001F69F23DCF0>)>,\n",
+       "              'concate': <classmethod(<function collage.concate at 0x000001F69F23E050>)>,\n",
+       "              '__dict__': <attribute '__dict__' of 'collage' objects>,\n",
+       "              '__weakref__': <attribute '__weakref__' of 'collage' objects>,\n",
+       "              '__doc__': None,\n",
+       "              'email': 'dfsd545df'})"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#static states -- functionalities (display,modify,concate,delete)\n",
     "class collage:\n",
@@ -514,14 +590,37 @@
     "collage.display()\n",
     "collage.modify()\n",
     "collage.delete()\n",
-    "collage.concate()"
+    "collage.concate()\n",
+    "collage.__dict__"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Object methods:\n"
+    "Object methods:\n",
+    "    . This is one type of method that perfoms the operation on non-static states (object states)\n",
+    "    . It is method type in which to perform create,access,modify,delete the members of non-static states (object states inside the specific object memory)\n",
+    "    . This method utilizes the data of an object for all its operations.\n",
+    "    . Here we have to define the function with arguments.\n",
+    "    . Function contains minimum one argument.(the first argument name should be self)\n",
+    "    . Self is user define argument, will holds the object address of the current object.\n",
+    "    . As an industrial rule we have to use argument name class self.\n",
+    "    . To make a objectmethod, we no need to use any decorator.\n",
+    "\n",
+    "SYNTAX: (define the object method)\n",
+    "\n",
+    "    def method_name(self,arguments....):\n",
+    "        |\n",
+    "        |any type operations\n",
+    "        |\n",
+    "    \n",
+    "    Note: we have to write inside the class only.\n",
+    "\n",
+    "SYNTAX: (calling the onject method)\n",
+    "\n",
+    "    object_name.method_name(arguments...)\n",
+    "    class_name.method_name(object_name,arguments...)"
    ]
   },
   {
@@ -533,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -999,6 +1098,44 @@
     "    else:\n",
     "        print(\"invalid account no or pin \")\n",
     "main(bank)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n",
+      "89\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "mappingproxy({'__module__': '__main__',\n",
+       "              'p': 89,\n",
+       "              '__dict__': <attribute '__dict__' of 'n' objects>,\n",
+       "              '__weakref__': <attribute '__weakref__' of 'n' objects>,\n",
+       "              '__doc__': None})"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class n:\n",
+    "    p=32\n",
+    "print(n.p)\n",
+    "class n:\n",
+    "    p=89\n",
+    "print(n.p)\n",
+    "n.__dict__"
    ]
   }
  ],
